# src/controllers/auth.controller.ts
@@ -1,15 +1,16 @@
 import {
-  Body, Controller, Post, Route, Tags, Security, Request,
+  Body, Controller, Post, Route, Tags, Security, Request, Query,
 } from 'tsoa';
+import bcrypt from 'bcrypt';
 import { EnumMail } from '../interfaces/sendMail.interface';
-import { IChangePasswordRequest, ILoginRequest, ITokenResponse } from '../interfaces/token.interface';
+import { ILoginRequest, ITokenResponse } from '../interfaces/token.interface';
 import { IUserRequest } from '../interfaces/user.interface';
 import { ProvideSingleton, inject } from '../inversify/ioc';
 import { validateMiddleware } from '../middlewares/validate.middleware';
 import { UserCollection } from '../models/user.model';
 import AuthService from '../services/auth.service';
 import EmailService from '../services/email.service';
-import { changePasswordSchema, registerSchema } from '../validations/auth.validate';
+import { registerSchema } from '../validations/auth.validate';
 
 @Tags('Auth')
 @Route('/auth')
@@ -64,22 +65,24 @@ export class AuthController extends Controller {
     return { message: 'CHECK_YOUR_EMAIL_TO_RESET_PASSWORD' };
   }
 
-  @Post('/change-password')
-  @Security('oauth2')
-  async changePassword(@Body() data: IChangePasswordRequest, @Request() request: any): Promise<{ message: string }> {
-    validateMiddleware(changePasswordSchema, data);
-    const message = await this.authService.changePassword({
-      ...data,
-      userId: request.user.userId,
-    });
+  @Post('/reset-password')
+  async resetPassword(@Query() userId: string, @Body() data:{ newPassword: string }): Promise<{ message: string }> {
+    const account = await UserCollection.findById(userId);
+    if (!account) {
+      return {
+        message: 'USER_NOT_FOUND',
+      };
+    }
 
-    return {
-      message,
-    };
+    const newPassword = await bcrypt.hash(data.newPassword, account.passwordSalt || '');
+    await account.updateOne({
+      password: newPassword,
+    });
+    account.save();
+    return { message: 'RESET_PASSWORD_SUCCESS' };
   }
 
   @Post('/verify-account/:accountId')
-  @Security('oauth2')
   async verifyAccount(accountId: string):Promise<{ message: string }> {
     const message = await this.authService.verifyAccount(accountId);
     return {
