# src/routes/swagger.json
@@ -791,6 +791,63 @@
 				}
 			}
 		},
+		"/auth/reset-password": {
+			"post": {
+				"operationId": "ResetPassword",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"newPassword": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"newPassword"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/auth/change-password": {
 			"post": {
 				"operationId": "ChangePassword",
@@ -861,11 +918,7 @@
 				"tags": [
 					"Auth"
 				],
-				"security": [
-					{
-						"oauth2": []
-					}
-				],
+				"security": [],
 				"parameters": [
 					{
 						"in": "path",
